# besigo

./: BUILD.md
src/: CMakeLists.txt  config.h.in  kelemenmlt.h  lensnuma.h  model.h  xor128.h  zmxmlt.cpp
src/CMake/: EnableEmbree.cmake  EnableTBB.cmake
src/Embree/: CMakeLists.txt
src/TBB/: CMakeLists.txt
